<resources>
    <string name="app_name">SFIE</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="meal_date">Meal date</string>
    <string name="add_food">ADD FOOD</string>
    <string name="save_meal">SAVE MEAL</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="save_food">Save Food</string>
    <string name="food_name">Food Name</string>
    <string name="info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_past">Show Past</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="done_shopping">Done Shopping</string>
    <string name="add_material">Add Shop Item</string>
</resources>
