<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/food_name"
                  android:hint="@string/food_name"/>

        <LinearLayout android:layout_width="match_parent"
                      android:id="@+id/ingredients_wrapper"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/food_name"
                      android:orientation="vertical"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_ingredient"
                android:text="@string/add_ingredient"
                android:layout_below="@id/ingredients_wrapper"
                android:layout_centerHorizontal="true"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_save_food"
                android:text="@string/save_food"
                android:layout_below="@id/button_add_ingredient"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>