<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/type_spinner"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/meal_date"
                  android:hint="@string/meal_date"
                  android:layout_below="@+id/type_spinner"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:inputType="date"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/foods_wrapper"
                      android:layout_below="@id/meal_date"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"
                      android:orientation="vertical"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_food"
                android:text="@string/add_food"
                android:layout_below="@+id/foods_wrapper"
                android:layout_centerHorizontal="true"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_save_meal"
                android:text="@string/save_meal"
                android:layout_below="@+id/button_add_food"
                android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</ScrollView>